crates/service/tests/references/snapshots/features__references__block_def_int_idx-2.snap
---
source: crates/service/tests/references/mod.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 18
      },
      "end": {
        "line": 5,
        "character": 19
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 16
      },
      "end": {
        "line": 6,
        "character": 17
      }
    }
  }
]
