crates/service/tests/references/snapshots/features__references__block_relation.snap
---
source: crates/service/tests/references/mod.rs
expression: def_a
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 11
      },
      "end": {
        "line": 3,
        "character": 13
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 19
      },
      "end": {
        "line": 5,
        "character": 20
      }
    }
  }
]
