crates/service/tests/references/snapshots/features__references__call_int_idx.snap
---
source: crates/service/tests/references/mod.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 5
      },
      "end": {
        "line": 2,
        "character": 9
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 14
      },
      "end": {
        "line": 3,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 21
      },
      "end": {
        "line": 5,
        "character": 22
      }
    }
  }
]
